--- a/index.html
+++ b/index.html
@@ -1270,10 +1270,10 @@
 
 <h3>Agniveer Recruitment (Army)</h3>
 <ul>
-  <li><a href="agniveer-gd.html">Agniveer (GD) — General Duty</a></li>
-  <li><a href="agniveer-technical.html">Agniveer (Technical)</a></li>
-  <li><a href="agniveer-clerk.html">Agniveer (Clerk / Store Keeper Technical)</a></li>
-  <li><a href="agniveer-tradesman.html">Agniveer (Tradesman)</a></li>
+  <li><a href="agniveer-indian-army.html">Agniveer (GD) — General Duty</a></li>
+  <li><a href="agniveer-indian-army.html">Agniveer (Technical)</a></li>
+  <li><a href="agniveer-indian-army.html">Agniveer (Clerk / Store Keeper Technical)</a></li>
+  <li><a href="agniveer-indian-army.html">Agniveer (Tradesman)</a></li>
 </ul>
 
 <h3>Special / Miscellaneous Entries</h3>
