--- a/index.html
+++ b/index.html
@@ -1278,10 +1278,10 @@
 
 <h3>Special / Miscellaneous Entries</h3>
 <ul>
-  <li><a href="army-medical-corps.html">Army Medical Corps (AMC)</a></li>
-  <li><a href="mns.html">Military Nursing Service (MNS)</a></li>
-  <li><a href="sports-quota.html">Sports Quota Recruitment (Outstanding Sportspersons)</a></li>
-  <li><a href="dsc.html">Defence Security Corps (DSC)</a></li>
+  <li><a href="special-miscllaneous-entries.html">Army Medical Corps (AMC)</a></li>
+  <li><a href="special-miscllaneous-entries.html">Military Nursing Service (MNS)</a></li>
+  <li><a href="special-miscllaneous-entries.html">Sports Quota Recruitment (Outstanding Sportspersons)</a></li>
+  <li><a href="special-miscllaneous-entries.html">Defence Security Corps (DSC)</a></li>
 </ul>
 
 <h3>Recruitment Rallies</h3>
