--- a/index.html
+++ b/index.html
@@ -1300,14 +1300,14 @@
                 <ul>
   <li><a href="upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html">NDA — National Defence Academy (UPSC)</a></li>
   <li><a href="upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html">CDS — Combined Defence Services (UPSC)</a></li>
-  <li><a href="tgc.html">TGC — Technical Graduate Course (Engineering Graduates)</a></li>
-  <li><a href="ues.html">UES — University Entry Scheme</a></li>
-  <li><a href="jag.html">JAG Entry — Judge Advocate General (Law Graduates)</a></li>
-  <li><a href="ncc-special-entry.html">NCC Special Entry (C Certificate Holders)</a></li>
-  <li><a href="ssc-tech.html">SSC (Tech) — Short Service Commission Technical</a></li>
-  <li><a href="afmc.html">AFMC — Armed Forces Medical College Entry (Doctors)</a></li>
-  <li><a href="amc-officers.html">Army Medical Corps Officers (Specialist Doctors)</a></li>
-  <li><a href="mns-officers.html">MNS — Military Nursing Service (Officers)</a></li>
+  <li><a href="in-tgc.html">TGC — Technical Graduate Course (Engineering Graduates)</a></li>
+  <li><a href="in-ues.html">UES — University Entry Scheme</a></li>
+  <li><a href="in-jag.html">JAG Entry — Judge Advocate General (Law Graduates)</a></li>
+  <li><a href="in-ncc-special-entry.html">NCC Special Entry (C Certificate Holders)</a></li>
+  <li><a href="in-ssc-tech.html">SSC (Tech) — Short Service Commission Technical</a></li>
+  <li><a href="in-afmc.html">AFMC — Armed Forces Medical College Entry (Doctors)</a></li>
+  <li><a href="in-amc-officers.html">Army Medical Corps Officers (Specialist Doctors)</a></li>
+  <li><a href="in-mns-officers.html">MNS — Military Nursing Service (Officers)</a></li>
 </ul>
 
 <h3>Sailor / Agniveer Recruitment</h3>
