--- a/in-tgc.html
+++ b/in-tgc.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indian Navy: Technical Graduate Course (TGC) Guide</title>
     <script src="redirect_if_needed.js"></script>
+    <script src="redirect_if_needed.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -136,6 +137,8 @@
             transform: scale(0.95);
             opacity: 0;
             transition: transform 0.3s ease, opacity 0.3s ease;
+            max-height: 90vh; /* Allow modal to take up to 90% of the viewport height */
+            overflow-y: auto; /* Add a scrollbar if content overflows */
         }
         .modal-overlay.active .modal-content {
             transform: scale(1);
@@ -1027,4 +1030,3 @@
     </script>
 </body>
 </html>
-
