--- a/index.html
+++ b/index.html
@@ -1320,10 +1320,10 @@
 
 <h3>Special Entries</h3>
 <ul>
-  <li><a href="sports-entry-navy.html">Sports Quota Entry (Outstanding Sportspersons)</a></li>
-  <li><a href="navy-ssc-it.html">SSC IT / Cyber Security Entry</a></li>
-  <li><a href="navy-law.html">Law Cadre Entry (Judge Advocate General)</a></li>
-  <li><a href="navy-education.html">Education Branch Officers</a></li>
+  <li><a href="in-special-entries.html">Sports Quota Entry (Outstanding Sportspersons)</a></li>
+  <li><a href="in-special-entries.html">SSC IT / Cyber Security Entry</a></li>
+  <li><a href="in-special-entries.html">Law Cadre Entry (Judge Advocate General)</a></li>
+  <li><a href="in-special-entries.html">Education Branch Officers</a></li>
 </ul>
 
 <h3>Recruitment Rallies</h3>
