--- a/index.html
+++ b/index.html
@@ -1340,38 +1340,38 @@
             <h3 class="text-3xl font-bold mb-4">भारतीय वायु सेना भर्ती</h3>
             <div class="modal-list">
                 <ul>
-  <li><a href="afcat.html">AFCAT — Air Force Common Admission Test (Flying, Technical & Ground Duty)</a></li>
-  <li><a href="nda.html">NDA — National Defence Academy (Air Force Wing)</a></li>
-  <li><a href="cds.html">CDS — Combined Defence Services (Air Force Academy, Hyderabad)</a></li>
-  <li><a href="ncc-special-entry.html">NCC Special Entry — Flying Branch (C Certificate Holders)</a></li>
-  <li><a href="met-entry.html">Meteorology Entry — Ground Duty (Non-Technical)</a></li>
+  <li><a href="iaf-top-four-post.html">AFCAT — Air Force Common Admission Test (Flying, Technical & Ground Duty)</a></li>
+  <li><a href="iaf-top-four-post.html">NDA — National Defence Academy (Air Force Wing)</a></li>
+  <li><a href="iaf-top-four-post.html">CDS — Combined Defence Services (Air Force Academy, Hyderabad)</a></li>
+  <li><a href="iaf-top-four-post.html">NCC Special Entry — Flying Branch (C Certificate Holders)</a></li>
+  <li><a href="iaf-top-four-post.html">Meteorology Entry — Ground Duty (Non-Technical)</a></li>
 </ul>
 
 <h3>Airmen / Other Ranks Recruitment</h3>
 <ul>
-  <li><a href="airmen-group-x.html">Airmen Group X (Technical Trades)</a></li>
-  <li><a href="airmen-group-y.html">Airmen Group Y (Non-Technical Trades)</a></li>
-  <li><a href="airmen-musician.html">Airmen Group Y — Musician Trade</a></li>
+  <li><a href="iaf-airmen-group-all.html">Airmen Group X (Technical Trades)</a></li>
+  <li><a href="iaf-airmen-group-all.html">Airmen Group Y (Non-Technical Trades)</a></li>
+  <li><a href="iaf-airmen-group-all.html">Airmen Group Y — Musician Trade</a></li>
 </ul>
 
 <h3>Agniveer Vayu (IAF Agniveer Recruitment)</h3>
 <ul>
-  <li><a href="agniveer-vayu-gd.html">Agniveer Vayu — General Duty (All Arms)</a></li>
-  <li><a href="agniveer-vayu-technical.html">Agniveer Vayu — Technical (Aviation, Electronics, etc.)</a></li>
-  <li><a href="agniveer-vayu-nontechnical.html">Agniveer Vayu — Non-Technical (Admin, Accounts, Logistics)</a></li>
-  <li><a href="agniveer-vayu-musician.html">Agniveer Vayu — Musician Trade</a></li>
+  <li><a href="iaf-agniveer-vayu-all.html">Agniveer Vayu — General Duty (All Arms)</a></li>
+  <li><a href="iaf-agniveer-vayu-all.html">Agniveer Vayu — Technical (Aviation, Electronics, etc.)</a></li>
+  <li><a href="iaf-agniveer-vayu-all.html">Agniveer Vayu — Non-Technical (Admin, Accounts, Logistics)</a></li>
+  <li><a href="iaf-agniveer-vayu-all.html">Agniveer Vayu — Musician Trade</a></li>
 </ul>
 
 <h3>Medical / Nursing Entries</h3>
 <ul>
-  <li><a href="afmc.html">AFMC — Armed Forces Medical College (Doctors for IAF)</a></li>
-  <li><a href="iaf-nursing.html">Nursing & Paramedical Staff (IAF Hospitals)</a></li>
+  <li><a href="iaf-medical-nursing-staff.html">AFMC — Armed Forces Medical College (Doctors for IAF)</a></li>
+  <li><a href="iaf-medical-nursing-staff.html">Nursing & Paramedical Staff (IAF Hospitals)</a></li>
 </ul>
 
 <h3>Special / Miscellaneous Entries</h3>
 <ul>
-  <li><a href="sports-quota.html">Sports Quota Recruitment (Outstanding Sportspersons)</a></li>
-  <li><a href="meteorology-officer.html">Meteorology Officer (Direct Entry)</a></li>
+  <li><a href="iaf-sports-quota.html">Sports Quota Recruitment (Outstanding Sportspersons)</a></li>
+  <li><a href="iaf-meteorology-officer.html">Meteorology Officer (Direct Entry)</a></li>
 </ul>
 
 <h3>Recruitment Rallies</h3>
