--- a/index.html
+++ b/index.html
@@ -1286,7 +1286,13 @@
 
 <h3>Recruitment Rallies</h3>
 <ul>
-  <li><a href="iaf-rally.html">IAF Recruitment Rallies (Zone-wise / State-wise)</a></li>
+  <li><a href="army-all-rally.html">Indian Army Soldier General Duty (GD) Rally</a></li>
+  <li><a href="army-all-rally.html">Indian Army Soldier Technical Rally</a></li>
+  <li><a href="army-all-rally.html">Indian Army Soldier Clerk / Store Keeper Technical Rally</a></li>
+  <li><a href="army-all-rally.html">Indian Army Soldier Nursing Assistant Rally</a></li>
+  <li><a href="army-all-rally.html">Indian Army Soldier Tradesman Rally</a></li>
+  <li><a href="army-all-rally.html">Indian Army Sepoy Pharma Rally</a></li>
+  <li><a href="army-all-rally.html">Indian Army Agniveer Recruitment Rally</a></li>
 </ul>
             </div>
         </div>
