--- a/index.html
+++ b/index.html
@@ -1394,24 +1394,24 @@
             <h3 class="text-3xl font-bold mb-4">DRDO भर्ती</h3>
             <div class="modal-list">
                 <ul>
-  <li><a href="drdo-scientist-b.html">Scientist ‘B’ (Entry through GATE / Written Test & Interview)</a></li>
-  <li><a href="drdo-scientist-cde.html">Scientist ‘C’, ‘D’, ‘E’ (Lateral Entry for Experienced Professionals)</a></li>
+  <li><a href="drdo-scientist-cde-b.html">Scientist ‘B’ (Entry through GATE / Written Test & Interview)</a></li>
+  <li><a href="drdo-scientist-cde-b.html">Scientist ‘C’, ‘D’, ‘E’ (Lateral Entry for Experienced Professionals)</a></li>
 </ul>
 
 <h3>Technical Cadre (CEPTAM)</h3>
 <ul>
-  <li><a href="drdo-ceptam-tech-a.html">DRDO CEPTAM — Technician ‘A’</a></li>
-  <li><a href="drdo-ceptam-sta-b.html">DRDO CEPTAM — Senior Technical Assistant ‘B’</a></li>
+  <li><a href="drdo-ceptam-tech-sta-b-a.html">DRDO CEPTAM — Technician ‘A’</a></li>
+  <li><a href="drdo-ceptam-tech-sta-b-a.html">DRDO CEPTAM — Senior Technical Assistant ‘B’</a></li>
 </ul>
 
 <h3>Admin & Allied Cadre (CEPTAM)</h3>
 <ul>
-  <li><a href="drdo-ceptam-admin-assistant.html">Administrative Assistant</a></li>
-  <li><a href="drdo-ceptam-store-assistant.html">Store Assistant</a></li>
-  <li><a href="drdo-ceptam-security-assistant.html">Security Assistant</a></li>
-  <li><a href="drdo-ceptam-stenographer.html">Stenographer Grade-I & II</a></li>
-  <li><a href="drdo-ceptam-vehicle-operator.html">Vehicle Operator ‘A’</a></li>
-  <li><a href="drdo-ceptam-fireman.html">Fireman</a></li>
+  <li><a href="drdo-ceptam-admin-admin-all.html">Administrative Assistant</a></li>
+  <li><a href="drdo-ceptam-admin-admin-all.html">Store Assistant</a></li>
+  <li><a href="drdo-ceptam-admin-admin-all.html">Security Assistant</a></li>
+  <li><a href="drdo-ceptam-admin-admin-all.html">Stenographer Grade-I & II</a></li>
+  <li><a href="drdo-ceptam-admin-admin-all.html">Vehicle Operator ‘A’</a></li>
+  <li><a href="drdo-ceptam-admin-admin-all.html">Fireman</a></li>
 </ul>
 
 <h3>Multi Tasking Staff (MTS)</h3>
@@ -1421,22 +1421,22 @@
 
 <h3>Fellowships & Research Opportunities</h3>
 <ul>
-  <li><a href="drdo-jrf.html">Junior Research Fellowship (JRF)</a></li>
-  <li><a href="drdo-srf.html">Senior Research Fellowship (SRF)</a></li>
-  <li><a href="drdo-ra.html">Research Associate (RA)</a></li>
+  <li><a href="drdo-jrf-srf-ra.html">Junior Research Fellowship (JRF)</a></li>
+  <li><a href="drdo-jrf-srf-ra.html">Senior Research Fellowship (SRF)</a></li>
+  <li><a href="drdo-jrf-srf-ra.html">Research Associate (RA)</a></li>
 </ul>
 
 <h3>Internships & Training</h3>
 <ul>
-  <li><a href="drdo-internship.html">DRDO Internship (Under Graduate & Post Graduate Students)</a></li>
-  <li><a href="drdo-apprenticeship.html">DRDO Apprenticeship (ITI, Diploma, Graduate Apprentices)</a></li>
+  <li><a href="drdo-internship-training.html">DRDO Internship (Under Graduate & Post Graduate Students)</a></li>
+  <li><a href="drdo-internship-training.html">DRDO Apprenticeship (ITI, Diploma, Graduate Apprentices)</a></li>
 </ul>
 
 <h3>Research Fellowships</h3>
 <ul>
-  <li><a href="drdo-jrf.html">Junior Research Fellowship (JRF)</a></li>
-  <li><a href="drdo-srf.html">Senior Research Fellowship (SRF)</a></li>
-  <li><a href="drdo-ra.html">Research Associate (RA)</a></li>
+  <li><a href="drdo-jrf-research.html">Junior Research Fellowship (JRF)</a></li>
+  <li><a href="drdo-jrf-research.html">Senior Research Fellowship (SRF)</a></li>
+  <li><a href="drdo-jrf-research.html">Research Associate (RA)</a></li>
 </ul>
             </div>
         </div>
