--- a/index.html
+++ b/index.html
@@ -1241,8 +1241,8 @@
             <h3 class="text-3xl font-bold mb-4">भारतीय सेना भर्ती</h3>
             <div class="modal-list">
           <ul>
-  <li><a href="nda.html">NDA — National Defence Academy (UPSC)</a></li>
-  <li><a href="cds.html">CDS — Combined Defence Services (UPSC)</a></li>
+  <li><a href="upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html">NDA — National Defence Academy (UPSC)</a></li>
+  <li><a href="upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html">CDS — Combined Defence Services (UPSC)</a></li>
   <li><a href="tgc.html">TGC — Technical Graduate Course (Engineering Graduates)</a></li>
   <li><a href="ues.html">UES — University Entry Scheme</a></li>
   <li><a href="jag.html">JAG Entry — Judge Advocate General (Law Graduates)</a></li>
@@ -1448,54 +1448,54 @@
             <h3 class="text-3xl font-bold mb-4">ISRO भर्ती</h3>
             <div class="modal-list">
                 <ul>
-  <li><a href="isro-scientist-engineer-electronics.html">Scientist / Engineer — Electronics</a></li>
-  <li><a href="isro-scientist-engineer-mechanical.html">Scientist / Engineer — Mechanical</a></li>
-  <li><a href="isro-scientist-engineer-computer.html">Scientist / Engineer — Computer Science</a></li>
-  <li><a href="isro-scientist-engineer-electrical.html">Scientist / Engineer — Electrical</a></li>
-  <li><a href="isro-scientist-engineer-civil.html">Scientist / Engineer — Civil</a></li>
-  <li><a href="isro-scientist-engineer-refrigeration.html">Scientist / Engineer — Refrigeration & Air Conditioning</a></li>
-  <li><a href="isro-scientist-engineer-architecture.html">Scientist / Engineer — Architecture</a></li>
+  <li><a href="isro-scientist-engineer-all.html">Scientist / Engineer — Electronics</a></li>
+  <li><a href="isro-scientist-engineer-all.html">Scientist / Engineer — Mechanical</a></li>
+  <li><a href="isro-scientist-engineer-all.html">Scientist / Engineer — Computer Science</a></li>
+  <li><a href="isro-scientist-engineer-all.html">Scientist / Engineer — Electrical</a></li>
+  <li><a href="isro-scientist-engineer-all.html">Scientist / Engineer — Civil</a></li>
+  <li><a href="isro-scientist-engineer-all.html">Scientist / Engineer — Refrigeration & Air Conditioning</a></li>
+  <li><a href="isro-scientist-engineer-all.html">Scientist / Engineer — Architecture</a></li>
 </ul>
 
 <h3>Technical Cadre</h3>
 <ul>
-  <li><a href="isro-technical-assistant.html">Technical Assistant</a></li>
-  <li><a href="isro-technician-b.html">Technician ‘B’</a></li>
-  <li><a href="isro-draughtsman-b.html">Draughtsman ‘B’</a></li>
-  <li><a href="isro-library-assistant.html">Library Assistant</a></li>
+  <li><a href="isro-technical-all.html">Technical Assistant</a></li>
+  <li><a href="isro-technical-all.html">Technician ‘B’</a></li>
+  <li><a href="isro-technical-all.html">Draughtsman ‘B’</a></li>
+  <li><a href="isro-technical-all.html">Library Assistant</a></li>
 </ul>
 
 <h3>Administrative & Support Cadre</h3>
 <ul>
-  <li><a href="isro-administrative-officer.html">Administrative Officer</a></li>
-  <li><a href="isro-account-officer.html">Accounts Officer</a></li>
-  <li><a href="isro-purchase-officer.html">Purchase & Stores Officer</a></li>
-  <li><a href="isro-assistants.html">Assistants (Admin, Accounts, Purchase & Stores)</a></li>
-  <li><a href="isro-junior-personal-assistant.html">Junior Personal Assistant (JPA)</a></li>
-  <li><a href="isro-stenographer.html">Stenographer</a></li>
-  <li><a href="isro-upper-division-clerk.html">Upper Division Clerk (UDC)</a></li>
+  <li><a href="isro-administrative-all.html">Administrative Officer</a></li>
+  <li><a href="isro-administrative-all.html">Accounts Officer</a></li>
+  <li><a href="isro-administrative-all.html">Purchase & Stores Officer</a></li>
+  <li><a href="isro-administrative-all.html">Assistants (Admin, Accounts, Purchase & Stores)</a></li>
+  <li><a href="isro-administrative-all.html">Junior Personal Assistant (JPA)</a></li>
+  <li><a href="isro-administrative-all.html">Stenographer</a></li>
+  <li><a href="isro-administrative-all.html">Upper Division Clerk (UDC)</a></li>
 </ul>
 
 <h3>Driver & Security Posts</h3>
 <ul>
-  <li><a href="isro-light-vehicle-driver.html">Light Vehicle Driver (LVD)</a></li>
-  <li><a href="isro-heavy-vehicle-driver.html">Heavy Vehicle Driver (HVD)</a></li>
-  <li><a href="isro-staff-car-driver.html">Staff Car Driver</a></li>
-  <li><a href="isro-security-guard.html">Security Guard</a></li>
-  <li><a href="isro-fireman.html">Fireman</a></li>
+  <li><a href="isro-light-driver-security.html">Light Vehicle Driver (LVD)</a></li>
+  <li><a href="isro-light-driver-security.html">Heavy Vehicle Driver (HVD)</a></li>
+  <li><a href="isro-light-driver-security.html">Staff Car Driver</a></li>
+  <li><a href="isro-light-driver-security.html">Security Guard</a></li>
+  <li><a href="isro-light-driver-security.html">Fireman</a></li>
 </ul>
 
 <h3>Apprenticeship / Training</h3>
 <ul>
-  <li><a href="isro-apprenticeship.html">ISRO Apprenticeship (ITI / Diploma / Graduate)</a></li>
-  <li><a href="isro-internship.html">ISRO Internship / Project Training</a></li>
+  <li><a href="isro-apprenticeship-internship.html">ISRO Apprenticeship (ITI / Diploma / Graduate)</a></li>
+  <li><a href="isro-apprenticeship-internship.html">ISRO Internship / Project Training</a></li>
 </ul>
 
 <h3>Research Fellowships</h3>
 <ul>
-  <li><a href="isro-jrf.html">Junior Research Fellowship (JRF)</a></li>
-  <li><a href="isro-srf.html">Senior Research Fellowship (SRF)</a></li>
-  <li><a href="isro-ra.html">Research Associate (RA)</a></li>
+  <li><a href="isro-research-fellowships.html">Junior Research Fellowship (JRF)</a></li>
+  <li><a href="isro-research-fellowships.html">Senior Research Fellowship (SRF)</a></li>
+  <li><a href="isro-research-fellowships.html">Research Associate (RA)</a></li>
 </ul>
             </div>
         </div>
