--- a/index.html
+++ b/index.html
@@ -1513,46 +1513,46 @@
 
 <h3>Stipendiary Trainees</h3>
 <ul>
-  <li><a href="barc-stipendiary-trainee-cat1.html">Stipendiary Trainee Category-I (Diploma Holders)</a></li>
-  <li><a href="barc-stipendiary-trainee-cat2.html">Stipendiary Trainee Category-II (ITI / 12th Science)</a></li>
+  <li><a href="barc-stipendiary-trainee-cat.html">Stipendiary Trainee Category-I (Diploma Holders)</a></li>
+  <li><a href="barc-stipendiary-trainee-cat.html">Stipendiary Trainee Category-II (ITI / 12th Science)</a></li>
 </ul>
 
 <h3>Technical & Scientific Staff</h3>
 <ul>
   <li><a href="barc-scientific-assistant.html">Scientific Assistant (Various Disciplines)</a></li>
-  <li><a href="barc-technician.html">Technician (Boiler, Electrical, Fitter, Welder, etc.)</a></li>
+  <li><a href="barc-scientific-assistant.html">Technician (Boiler, Electrical, Fitter, Welder, etc.)</a></li>
 </ul>
 
 <h3>Medical & Paramedical Posts</h3>
 <ul>
   <li><a href="barc-medical-officer.html">Medical Officer / Specialist Doctor</a></li>
-  <li><a href="barc-dental-surgeon.html">Dental Surgeon</a></li>
-  <li><a href="barc-nurse.html">Nurse (A/B)</a></li>
-  <li><a href="barc-pharmacist.html">Pharmacist</a></li>
-  <li><a href="barc-lab-technician.html">Laboratory Technician</a></li>
-  <li><a href="barc-radiographer.html">Radiographer</a></li>
+  <li><a href="barc-medical-officer.html">Dental Surgeon</a></li>
+  <li><a href="barc-medical-officer.html">Nurse (A/B)</a></li>
+  <li><a href="barc-medical-officer.html">Pharmacist</a></li>
+  <li><a href="barc-medical-officer.html">Laboratory Technician</a></li>
+  <li><a href="barc-medical-officer.html">Radiographer</a></li>
 </ul>
 
 <h3>Administrative & Support Cadre</h3>
 <ul>
   <li><a href="barc-assistant-security-officer.html">Assistant Security Officer (ASO)</a></li>
-  <li><a href="barc-security-guard.html">Security Guard</a></li>
-  <li><a href="barc-stenographer.html">Stenographer</a></li>
-  <li><a href="barc-upper-division-clerk.html">Upper Division Clerk (UDC)</a></li>
-  <li><a href="barc-driver.html">Driver (Ordinary Grade)</a></li>
+  <li><a href="barc-assistant-security-officer.html">Security Guard</a></li>
+  <li><a href="barc-assistant-security-officer.html">Stenographer</a></li>
+  <li><a href="barc-assistant-security-officer.html">Upper Division Clerk (UDC)</a></li>
+  <li><a href="barc-assistant-security-officer.html">Driver (Ordinary Grade)</a></li>
 </ul>
 
 <h3>Apprenticeship / Training</h3>
 <ul>
-  <li><a href="barc-apprentice.html">Apprenticeship (ITI / Diploma / Graduate)</a></li>
-  <li><a href="barc-internship.html">Internship / Project Training (Students)</a></li>
+  <li><a href="barc-apprentice-internship.html">Apprenticeship (ITI / Diploma / Graduate)</a></li>
+  <li><a href="barc-apprentice-internship.html">Internship / Project Training (Students)</a></li>
 </ul>
 
 <h3>Research Fellowships</h3>
 <ul>
-  <li><a href="barc-jrf.html">Junior Research Fellowship (JRF)</a></li>
-  <li><a href="barc-srf.html">Senior Research Fellowship (SRF)</a></li>
-  <li><a href="barc-ra.html">Research Associate (RA)</a></li>
+  <li><a href="barc-jrf-srf-ra.html">Junior Research Fellowship (JRF)</a></li>
+  <li><a href="barc-jrf-srf-ra.html">Senior Research Fellowship (SRF)</a></li>
+  <li><a href="barc-jrf-srf-ra.html">Research Associate (RA)</a></li>
 </ul>
             </div>
         </div>
