--- a/index.html
+++ b/index.html
@@ -1565,28 +1565,28 @@
             <div class="modal-list">
                <ul>
   <li><a href="lic-aao-generalist.html">LIC AAO (Assistant Administrative Officer) — Generalist</a></li>
-  <li><a href="lic-aao-it.html">LIC AAO — IT</a></li>
-  <li><a href="lic-aao-chartered-accountant.html">LIC AAO — Chartered Accountant</a></li>
-  <li><a href="lic-aao-actuarial.html">LIC AAO — Actuarial</a></li>
-  <li><a href="lic-aao-legal.html">LIC AAO — Legal</a></li>
-  <li><a href="lic-aao-rajbhasha.html">LIC AAO — Rajbhasha</a></li>
+  <li><a href="lic-aao-generalist.html">LIC AAO — IT</a></li>
+  <li><a href="lic-aao-generalist.html">LIC AAO — Chartered Accountant</a></li>
+  <li><a href="lic-aao-generalist.html">LIC AAO — Actuarial</a></li>
+  <li><a href="lic-aao-generalist.html">LIC AAO — Legal</a></li>
+  <li><a href="lic-aao-generalist.html">LIC AAO — Rajbhasha</a></li>
 </ul>
 
 <h3>Specialist / Professional Recruitment</h3>
 <ul>
   <li><a href="lic-aao-specialist.html">LIC AAO (Specialist Posts)</a></li>
-  <li><a href="lic-actuary.html">LIC Actuarial Apprentices</a></li>
+  <li><a href="lic-aao-specialist.html">LIC Actuarial Apprentices</a></li>
 </ul>
 
 <h3>Development & Marketing Cadre</h3>
 <ul>
-  <li><a href="lic-ado.html">LIC ADO (Apprentice Development Officer)</a></li>
+  <li><a href="lic-insurance-advisor.html">LIC ADO (Apprentice Development Officer)</a></li>
   <li><a href="lic-insurance-advisor.html">LIC Insurance Advisor / Agent</a></li>
 </ul>
 
 <h3>Clerical Cadre Recruitment</h3>
 <ul>
-  <li><a href="lic-assistant.html">LIC Assistant (Clerk) — Cashier, Single Window Operator, Customer Service Executive</a></li>
+  <li><a href="lic-assistant-typist.html">LIC Assistant (Clerk) — Cashier, Single Window Operator, Customer Service Executive</a></li>
   <li><a href="lic-assistant-typist.html">LIC Assistant (Typist / Support Staff)</a></li>
 </ul>
 
