--- a/index.html
+++ b/index.html
@@ -1604,37 +1604,37 @@
             <h3 class="text-3xl font-bold mb-4">FCI भर्ती</h3>
             <div class="modal-list">
                 <ul>
-  <li><a href="fci-manager-general.html">Manager (General)</a></li>
-  <li><a href="fci-manager-depot.html">Manager (Depot)</a></li>
-  <li><a href="fci-manager-movement.html">Manager (Movement)</a></li>
-  <li><a href="fci-manager-accounts.html">Manager (Accounts)</a></li>
-  <li><a href="fci-manager-technical.html">Manager (Technical)</a></li>
-  <li><a href="fci-manager-civil.html">Manager (Civil Engineering)</a></li>
-  <li><a href="fci-manager-electrical-mechanical.html">Manager (Electrical Mechanical Engineering)</a></li>
-  <li><a href="fci-manager-hindi.html">Manager (Hindi)</a></li>
+  <li><a href="fci-all-post-general.html">Manager (General)</a></li>
+  <li><a href="fci-all-post-general.html">Manager (Depot)</a></li>
+  <li><a href="fci-all-post-general.html">Manager (Movement)</a></li>
+  <li><a href="fci-all-post-general.html">Manager (Accounts)</a></li>
+  <li><a href="fci-all-post-general.html">Manager (Technical)</a></li>
+  <li><a href="fci-all-post-general.html">Manager (Civil Engineering)</a></li>
+  <li><a href="fci-all-post-general.html">Manager (Electrical Mechanical Engineering)</a></li>
+  <li><a href="fci-all-post-general.html">Manager (Hindi)</a></li>
 </ul>
 
 <h3>Category II — Assistant Grade</h3>
 <ul>
-  <li><a href="fci-ag3-general.html">Assistant Grade-III (General)</a></li>
-  <li><a href="fci-ag3-depot.html">Assistant Grade-III (Depot)</a></li>
-  <li><a href="fci-ag3-accounts.html">Assistant Grade-III (Accounts)</a></li>
-  <li><a href="fci-ag3-technical.html">Assistant Grade-III (Technical)</a></li>
-  <li><a href="fci-steno.html">Stenographer Grade-II</a></li>
+  <li><a href="fci-ag3-general-all.html">Assistant Grade-III (General)</a></li>
+  <li><a href="fci-ag3-general-all.html">Assistant Grade-III (Depot)</a></li>
+  <li><a href="fci-ag3-general-all.html">Assistant Grade-III (Accounts)</a></li>
+  <li><a href="fci-ag3-general-all.html">Assistant Grade-III (Technical)</a></li>
+  <li><a href="fci-ag3-general-all.html">Stenographer Grade-II</a></li>
 </ul>
 
 <h3>Category III — Junior Engineer & Typist</h3>
 <ul>
-  <li><a href="fci-je-civil.html">Junior Engineer (Civil)</a></li>
-  <li><a href="fci-je-electrical.html">Junior Engineer (Electrical)</a></li>
-  <li><a href="fci-je-mechanical.html">Junior Engineer (Mechanical)</a></li>
-  <li><a href="fci-typist.html">Typist (Hindi)</a></li>
+  <li><a href="fci-je-civil-all.html">Junior Engineer (Civil)</a></li>
+  <li><a href="fci-je-civil-all.html">Junior Engineer (Electrical)</a></li>
+  <li><a href="fci-je-civil-all.html">Junior Engineer (Mechanical)</a></li>
+  <li><a href="fci-je-civil-all.html">Typist (Hindi)</a></li>
 </ul>
 
 <h3>Watchman & Support Staff</h3>
 <ul>
-  <li><a href="fci-watchman.html">Watchman</a></li>
-  <li><a href="fci-support-staff.html">Other Group D / Support Staff</a></li>
+  <li><a href="fci-watchman-all.html">Watchman</a></li>
+  <li><a href="fci-watchman-all.html">Other Group D / Support Staff</a></li>
 </ul>
             </div>
         </div>
