--- a/index.html
+++ b/index.html
@@ -1651,35 +1651,35 @@
 
 <h3>Insurance & Administrative Cadre</h3>
 <ul>
-  <li><a href="esic-insurance-inspector.html">Insurance Inspector / Social Security Inspector</a></li>
-  <li><a href="esic-assistant.html">Assistant (Administrative)</a></li>
-  <li><a href="esic-udc.html">Upper Division Clerk (UDC)</a></li>
-  <li><a href="esic-ldc.html">Lower Division Clerk (LDC)</a></li>
-  <li><a href="esic-stenographer.html">Stenographer</a></li>
-  <li><a href="esic-mts.html">Multi-Tasking Staff (MTS)</a></li>
+  <li><a href="esic-insurance-inspector-etc.html">Insurance Inspector / Social Security Inspector</a></li>
+  <li><a href="esic-insurance-inspector-etc.html">Assistant (Administrative)</a></li>
+  <li><a href="esic-insurance-inspector-etc.html">Upper Division Clerk (UDC)</a></li>
+  <li><a href="esic-insurance-inspector-etc.html">Lower Division Clerk (LDC)</a></li>
+  <li><a href="esic-insurance-inspector-etc.html">Stenographer</a></li>
+  <li><a href="esic-insurance-inspector-etc.html">Multi-Tasking Staff (MTS)</a></li>
 </ul>
 
 <h3>Medical Cadre Recruitment</h3>
 <ul>
-  <li><a href="esic-insurance-medical-officer.html">Insurance Medical Officer (IMO)</a></li>
-  <li><a href="esic-specialist-grade2.html">Specialist Grade-II (Doctors)</a></li>
-  <li><a href="esic-nurse.html">Staff Nurse</a></li>
-  <li><a href="esic-pharmacist.html">Pharmacist</a></li>
-  <li><a href="esic-lab-assistant.html">Lab Assistant / Technician</a></li>
-  <li><a href="esic-radiographer.html">Radiographer</a></li>
+  <li><a href="esic-insurance-medical-officer-etc.html">Insurance Medical Officer (IMO)</a></li>
+  <li><a href="esic-insurance-medical-officer-etc.html">Specialist Grade-II (Doctors)</a></li>
+  <li><a href="esic-insurance-medical-officer-etc.html">Staff Nurse</a></li>
+  <li><a href="esic-insurance-medical-officer-etc.html">Pharmacist</a></li>
+  <li><a href="esic-insurance-medical-officer-etc.html">Lab Assistant / Technician</a></li>
+  <li><a href="esic-insurance-medical-officer-etc.html">Radiographer</a></li>
 </ul>
 
 <h3>Paramedical & Other Staff</h3>
 <ul>
-  <li><a href="esic-dresser.html">Dresser / Nursing Orderly</a></li>
-  <li><a href="esic-cook.html">Cook / Kitchen Staff</a></li>
-  <li><a href="esic-wardboy.html">Ward Boy / Attendant</a></li>
+  <li><a href="esic-dresser-etc.html">Dresser / Nursing Orderly</a></li>
+  <li><a href="esic-dresser-etc.html">Cook / Kitchen Staff</a></li>
+  <li><a href="esic-dresser-etc.html">Ward Boy / Attendant</a></li>
 </ul>
 
 <h3>Apprenticeship / Training</h3>
 <ul>
-  <li><a href="esic-apprentice.html">ESIC Apprenticeship (ITI / Diploma / Graduate)</a></li>
-  <li><a href="esic-internship.html">Internship / Project Training (Medical & Administrative)</a></li>
+  <li><a href="esic-apprentice-internship.html">ESIC Apprenticeship (ITI / Diploma / Graduate)</a></li>
+  <li><a href="esic-apprentice-internship.html">Internship / Project Training (Medical & Administrative)</a></li>
 </ul>
             </div>
         </div>
