--- a/index.html
+++ b/index.html
@@ -1691,37 +1691,37 @@
             <h3 class="text-3xl font-bold mb-4">NABARD भर्ती</h3>
             <div class="modal-list">
                 <ul>
-  <li><a href="nabard-gradea.html">NABARD Grade ‘A’ Officer (Assistant Manager) — RDBS, Rajbhasha, Legal, Protocol & Security</a></li>
-  <li><a href="nabard-gradeb.html">NABARD Grade ‘B’ Officer (Manager) — RDBS</a></li>
+  <li><a href="nabard-gradea-a-b.html">NABARD Grade ‘A’ Officer (Assistant Manager) — RDBS, Rajbhasha, Legal, Protocol & Security</a></li>
+  <li><a href="nabard-gradea-a-b.html">NABARD Grade ‘B’ Officer (Manager) — RDBS</a></li>
 </ul>
 
 <h3>Development & Research Cadre</h3>
 <ul>
-  <li><a href="nabard-development-assistant.html">NABARD Development Assistant</a></li>
-  <li><a href="nabard-development-assistant-hindi.html">NABARD Development Assistant (Hindi)</a></li>
-  <li><a href="nabard-research-officer.html">Research Officer / Project Scientist</a></li>
+  <li><a href="nabard-development-assistant-all.html">NABARD Development Assistant</a></li>
+  <li><a href="nabard-development-assistant-all.html">NABARD Development Assistant (Hindi)</a></li>
+  <li><a href="nabard-development-assistant-all.html">Research Officer / Project Scientist</a></li>
 </ul>
 
 <h3>Specialist / Technical Cadre</h3>
 <ul>
-  <li><a href="nabard-it-officer.html">Information Technology Officer</a></li>
-  <li><a href="nabard-agriculture-expert.html">Agriculture & Rural Development Expert</a></li>
-  <li><a href="nabard-finance-specialist.html">Finance & Accounts Specialist</a></li>
-  <li><a href="nabard-environment-specialist.html">Environment & Social Impact Specialist</a></li>
-  <li><a href="nabard-statistics-economics.html">Statistics / Economics Officer</a></li>
+  <li><a href="nabard-it-officer-technical.html">Information Technology Officer</a></li>
+  <li><a href="nabard-it-officer-technical.html">Agriculture & Rural Development Expert</a></li>
+  <li><a href="nabard-it-officer-technical.html">Finance & Accounts Specialist</a></li>
+  <li><a href="nabard-it-officer-technical.html">Environment & Social Impact Specialist</a></li>
+  <li><a href="nabard-it-officer-technical.html">Statistics / Economics Officer</a></li>
 </ul>
 
 <h3>Support Staff Cadre</h3>
 <ul>
   <li><a href="nabard-office-attendant.html">Office Attendant</a></li>
-  <li><a href="nabard-driver.html">Driver / Support Staff</a></li>
+  <li><a href="nabard-office-attendant.html">Driver / Support Staff</a></li>
 </ul>
 
 <h3>Apprenticeship & Internship</h3>
 <ul>
-  <li><a href="nabard-gradea-internship.html">NABARD Internship for Grade ‘A’ Aspirants</a></li>
-  <li><a href="nabard-apprenticeship.html">Apprenticeship Program (Finance / Agri / IT)</a></li>
-  <li><a href="nabard-research-intern.html">Research Internship Scheme</a></li>
+  <li><a href="nabard-gradea-internship-all.html">NABARD Internship for Grade ‘A’ Aspirants</a></li>
+  <li><a href="nabard-gradea-internship-all.html">Apprenticeship Program (Finance / Agri / IT)</a></li>
+  <li><a href="nabard-gradea-internship-all.html">Research Internship Scheme</a></li>
 </ul>
             </div>
         </div>
