--- a/index.html
+++ b/index.html
@@ -1733,12 +1733,12 @@
             <h3 class="text-3xl font-bold mb-4">SEBI भर्ती</h3>
             <div class="modal-list">
                 <ul>
-  <li><a href="sebi-gradea-general.html">SEBI Grade ‘A’ Officer (Assistant Manager) — General Stream</a></li>
-  <li><a href="sebi-gradea-legal.html">SEBI Grade ‘A’ Officer (Assistant Manager) — Legal Stream</a></li>
-  <li><a href="sebi-gradea-information-technology.html">SEBI Grade ‘A’ Officer (Assistant Manager) — Information Technology</a></li>
-  <li><a href="sebi-gradea-research.html">SEBI Grade ‘A’ Officer (Assistant Manager) — Research Stream</a></li>
-  <li><a href="sebi-gradea-official-language.html">SEBI Grade ‘A’ Officer (Assistant Manager) — Official Language</a></li>
-  <li><a href="sebi-gradea-engineering.html">SEBI Grade ‘A’ Officer (Assistant Manager) — Engineering (Civil/Electrical)</a></li>
+  <li><a href="sebi-gradea-general-all.html">SEBI Grade ‘A’ Officer (Assistant Manager) — General Stream</a></li>
+  <li><a href="sebi-gradea-general-all.html">SEBI Grade ‘A’ Officer (Assistant Manager) — Legal Stream</a></li>
+  <li><a href="sebi-gradea-general-all.html">SEBI Grade ‘A’ Officer (Assistant Manager) — Information Technology</a></li>
+  <li><a href="sebi-gradea-general-all.html">SEBI Grade ‘A’ Officer (Assistant Manager) — Research Stream</a></li>
+  <li><a href="sebi-gradea-general-all.html">SEBI Grade ‘A’ Officer (Assistant Manager) — Official Language</a></li>
+  <li><a href="sebi-gradea-general-all.html">SEBI Grade ‘A’ Officer (Assistant Manager) — Engineering (Civil/Electrical)</a></li>
 </ul>
 
 <h3>Manager Cadre</h3>
@@ -1748,23 +1748,23 @@
 
 <h3>Specialist / Technical Posts</h3>
 <ul>
-  <li><a href="sebi-it-specialist.html">IT & Cyber Security Specialist</a></li>
-  <li><a href="sebi-finance-specialist.html">Finance & Accounts Specialist</a></li>
-  <li><a href="sebi-risk-management.html">Risk Management Officer</a></li>
-  <li><a href="sebi-market-research-analyst.html">Market Research Analyst</a></li>
-  <li><a href="sebi-data-scientist.html">Data Scientist / AI Specialist</a></li>
+  <li><a href="sebi-it-specialist-all-tech.html">IT & Cyber Security Specialist</a></li>
+  <li><a href="sebi-it-specialist-all-tech.html">Finance & Accounts Specialist</a></li>
+  <li><a href="sebi-it-specialist-all-tech.html">Risk Management Officer</a></li>
+  <li><a href="sebi-it-specialist-all-tech.html">Market Research Analyst</a></li>
+  <li><a href="sebi-it-specialist-all-tech.html">Data Scientist / AI Specialist</a></li>
 </ul>
 
 <h3>Support Staff Cadre</h3>
 <ul>
-  <li><a href="sebi-office-assistant.html">Office Assistant</a></li>
-  <li><a href="sebi-driver.html">Driver / Support Staff</a></li>
+  <li><a href="sebi-office-assistant-both.html">Office Assistant</a></li>
+  <li><a href="sebi-office-assistant-both.html">Driver / Support Staff</a></li>
 </ul>
 
 <h3>Internship & Fellowship</h3>
 <ul>
-  <li><a href="sebi-internship.html">SEBI Internship Program (Law, Finance, IT, Economics)</a></li>
-  <li><a href="sebi-fellowship.html">SEBI Fellowship / Research Programme</a></li>
+  <li><a href="sebi-internship-fellowship.html">SEBI Internship Program (Law, Finance, IT, Economics)</a></li>
+  <li><a href="sebi-internship-fellowship.html">SEBI Fellowship / Research Programme</a></li>
 </ul>
             </div>
         </div>
